tests/fixtures/valid/exception/try_else.py
# Test try/except/else
try:
    x: int = 10
except:
    print(b"error")
else:
    print(b"no error")
print(b"done")
