tests/fixtures/invalid/bytes_bitxor_bytes.py
# Test bytes bitwise XOR (unsupported operator)
x: bytes = b"hello"
y: bytes = b"world"
result: bytes = x ^ y
